--- a/local/gutter-services-fenwick.html
+++ b/local/gutter-services-fenwick.html
@@ -253,6 +253,7 @@ If your gutters are blocked, leaking, or overdue for attention, Home Repairs 4U 
 
 <footer>
 <p>📞 Call 07735 873694</p>
+<footer style="background:#000; color:#fff; text-align:center; padding:28px 15px; font-size:14px;">
 <div>
 © Home Repairs 4U | Doncaster & Surrounding Areas
 </div>
