--- a/local/gutter-services-kirk-sandall.html
+++ b/local/gutter-services-kirk-sandall.html
@@ -286,6 +286,8 @@ Whether your gutters are blocked, leaking, or overdue for maintenance, Home Repa
 
 <footer>
 <p>📞 Call 07735 873694</p>
+<footer style="background:#000; color:#fff; text-align:center; padding:28px 15px; font-size:14px;">
+<div>
 <div>
 © Home Repairs 4U | Service Areas, Doncaster
 <br><br>
