--- a/local/gutter-services-edenthorpe.html
+++ b/local/gutter-services-edenthorpe.html
@@ -255,7 +255,7 @@ If your gutters are showing signs of blockage, leakage, or wear, Home Repairs 4U
 <p>📞 Call 07735 873694</p>
 <footer style="background:#000; color:#fff; text-align:center; padding:28px 15px; font-size:14px;">
 <div>
-© Home Repairs 4U | Service Areas, Doncaster
+© Home Repairs 4U | Service Area, Edenthorpe
 <br><br>
 
 <a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
