--- a/local/gutter-services-kirk-sandall.html
+++ b/local/gutter-services-kirk-sandall.html
@@ -286,10 +286,9 @@ Whether your gutters are blocked, leaking, or overdue for maintenance, Home Repa
 
 <footer>
 <p>📞 Call 07735 873694</p>
-<footer style="background:#fff; color:#000; text-align:center; padding:28px 15px; font-size:14px;">
+<footer style="background:#000; color:#fff; text-align:center; padding:28px 15px; font-size:14px;">
 <div>
-<div>
-© Home Repairs 4U | Service Areas, Doncaster
+© Home Repairs 4U | Service Area, Kirk Sandall Doncaster
 <br><br>
 
 <a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
@@ -302,7 +301,8 @@ Whether your gutters are blocked, leaking, or overdue for maintenance, Home Repa
 
 <a href="https://www.facebook.com/people/Handyman-services/61584395621256/"
 target="_blank"
-rel="noopener" style="color:#fff; text-decoration:underline;">
+rel="noopener"
+style="color:#fff; text-decoration:underline;">
 Facebook
 </a>
 </div>
