--- a/index.html
+++ b/index.html
@@ -234,6 +234,11 @@ loading="lazy">
 <p>
 Proper guttering protects your property from water damage. We replace gutters, repair leaks, maintain downpipes and restore fascias and soffits using durable, weather-resistant products.
 </p>
+<p>
+Our guttering services are available across multiple local areas.
+See all locations we cover on our
+<a href="/services/service-areas.html">service areas page</a>.
+</p>
   <!-- Guttering Lightbox -->
 <a href="#guttering-lightbox">
 <img src="/images/gutter-repairs.webp"
