--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Home Repairs 4U – Exterior Decorating, Fencing, Garden, Gutters, Pressure Washing & uPVC Services in Askern DN6</title> 
-<link rel="icon" href="/favicon.png" type="image/png">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>Home Repairs 4U – Exterior Decorating, Fencing, Garden, Gutters, Pressure Washing & uPVC Services in Askern DN6</title>
+
 <link rel="canonical" href="https://homerepairs4u.com/">
+<link rel="icon" href="/favicon.png" type="image/png">
+
 <meta name="description" content="Home Repairs 4U provides professional exterior decorating, fence installation, garden maintenance, gutter replacement, pressure washing, and uPVC restoration in Askern DN6 and nearby areas. Call 07735 873694.">
 
-<link rel="preload" as="image" href="/images/logo.webp" />
+<link rel="preload" as="image" href="/images/logo.webp">
 
 <style>
-/* ========== Base styles ========== */
-body{
+body {
 margin:0;
-padding:0;
 font-family:Arial, sans-serif;
 background:#f9f9f9;
 color:#222;
 line-height:1.65;
 }
-header{
+header {
 text-align:center;
 padding:25px 10px;
 background:#fff;
 border-bottom:4px solid #27ae60;
 }
-.logo{
+.logo {
 max-height:90px;
-width:auto;
 }
-.call-btn{
+.call-btn {
 display:inline-block;
 margin-top:18px;
 padding:14px 28px;
@@ -40,17 +40,16 @@ font-size:19px;
 text-decoration:none;
 font-weight:bold;
 border-radius:6px;
-border:2px solid #000;
 }
-.call-btn:hover{ background:#333; }
-main{
+.call-btn:hover { background:#333; }
+main {
 max-width:900px;
 margin:0 auto;
 background:#fff;
 padding:25px 15px;
 }
-h1,h2,h3{ color:#111; }
-.service-btn{
+h1,h2 { color:#111; }
+.service-btn {
 display:inline-block;
 margin-top:15px;
 padding:12px 24px;
@@ -60,48 +59,41 @@ font-size:18px;
 text-decoration:none;
 font-weight:bold;
 border-radius:6px;
-border:2px solid #000;
 }
-.service-btn:hover{ background:#333; }
-footer{
+.service-btn:hover { background:#333; }
+footer {
 background:#000;
 color:#fff;
 text-align:center;
-padding:25px 15px;
-margin-top:40px;
+padding:28px 15px;
 font-size:14px;
+margin-top:40px;
 }
-
-/* ========== Lightbox styles ========== */
 .lightbox {
-display: none;
-position: fixed;
-z-index: 9999;
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-background: rgba(0,0,0,0.85);
-align-items: center;
-justify-content: center;
+display:none;
+position:fixed;
+inset:0;
+background:rgba(0,0,0,0.85);
+align-items:center;
+justify-content:center;
+z-index:9999;
 }
 .lightbox img {
-max-width: 95%;
-max-height: 95%;
-border-radius: 6px;
-box-shadow: 0 0 20px #000;
+max-width:95%;
+max-height:95%;
+border-radius:6px;
 }
-.lightbox:target { display: flex; }
+.lightbox:target { display:flex; }
 </style>
 
-<!-- Business Schema -->
+<!-- LocalBusiness Schema -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
 "@type":"LocalBusiness",
 "name":"Home Repairs 4U",
-"image":"https://steely1968.github.io/images/logo.webp",
-"url":"https://steely1968.github.io/",
+"image":"https://homerepairs4u.com/images/logo.webp",
+"url":"https://homerepairs4u.com/",
 "telephone":"+447735873694",
 "address":{
 "@type":"PostalAddress",
@@ -110,40 +102,13 @@ box-shadow: 0 0 20px #000;
 "addressRegion":"South Yorkshire",
 "addressCountry":"GB"
 },
-"description":"Professional home services in Askern DN6 including exterior decorating, fence installation, garden maintenance, gutter replacement, pressure washing, and uPVC restoration.",
-"areaServed":{
-"@type":"GeoCircle",
-"geoMidpoint":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.152},
-"geoRadius":16093
-},
+"description":"Professional home services in Askern DN6 including exterior decorating, fencing, garden maintenance, guttering, pressure washing and uPVC restoration.",
 "openingHoursSpecification":[{
 "@type":"OpeningHoursSpecification",
 "dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
 "opens":"07:00",
 "closes":"20:00"
-}],
-"makesOffer":[
-{"@type":"Offer","itemOffered":{"@type":"Service","name":"Exterior Decorating"}},
-{"@type":"Offer","itemOffered":{"@type":"Service","name":"Fence Installation"}},
-{"@type":"Offer","itemOffered":{"@type":"Service","name":"Garden Maintenance"}},
-{"@type":"Offer","itemOffered":{"@type":"Service","name":"Gutter Replacement"}},
-{"@type":"Offer","itemOffered":{"@type":"Service","name":"Pressure Washing"}},
-{"@type":"Offer","itemOffered":{"@type":"Service","name":"uPVC Restoration"}}
-]
-}
-</script>
-
-<!-- FAQ Schema -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"FAQPage",
-"mainEntity":[
-{"@type":"Question","name":"Which areas do you cover?","acceptedAnswer":{"@type":"Answer","text":"We serve Askern DN6 and a 10-mile radius including Campsall, Norton, Skellow, Carcroft, Adwick, Bentley, and surrounding villages."}},
-{"@type":"Question","name":"Are your services insured?","acceptedAnswer":{"@type":"Answer","text":"Yes, all our services are fully insured to ensure peace of mind and reliable workmanship."}},
-{"@type":"Question","name":"Can I book multiple services at the same time?","acceptedAnswer":{"@type":"Answer","text":"Yes, we can schedule multiple services together for convenience and efficiency."}},
-{"@type":"Question","name":"Do you offer free consultations?","acceptedAnswer":{"@type":"Answer","text":"Yes, we provide free consultations to assess your requirements and give accurate quotes."}}
-]
+}]
 }
 </script>
 
@@ -151,181 +116,88 @@ box-shadow: 0 0 20px #000;
 <body>
 
 <header>
-<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
-<div style="text-align:center; margin-top:10px;">
-<a href="/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
-</div>
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
 <br>
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
 <main>
 
-<h1>Welcome to Home Repairs 4U – Professional Home Services in Askern DN6</h1>
+<h1>Professional Home Services in Askern DN6</h1>
 
 <p>
-At <strong>Home Repairs 4U</strong> we provide expert home and garden services across Askern DN6 and surrounding areas. From exterior decorating and fencing to guttering, pressure washing and uPVC restoration — our experienced, insured team delivers high-quality workmanship and lasting results.
+At <strong>Home Repairs 4U</strong>, we provide reliable home and exterior services across Askern DN6 and surrounding areas. From decorating and fencing to guttering, pressure washing and uPVC restoration, all work is fully insured and completed to a high standard.
 </p>
 
-<!-- Exterior Decorating -->
+<p>
+We provide reliable home repair services across South Yorkshire.
+You can view the full list of towns and villages we cover on our
+<a href="/services/service-areas.html">service areas page</a>.
+</p>
+
 <h2>Exterior Decorating</h2>
 <p>
-Our <strong>exterior decorating</strong> service refreshes brickwork, cladding, fences and railings using weather-resistant paints and careful surface preparation (clean, sand, prime). We help with colour selection and finishes to ensure a durable, attractive result that enhances kerb appeal.
+Our exterior decorating service refreshes brickwork, cladding, fences and railings using weather-resistant paints and proper preparation for long-lasting results.
 </p>
-
-<!-- Decorating Lightbox -->
 <a href="#decorating-lightbox">
-<img src="/images/house-before-after.webp"
-alt="Exterior decorating before and after example"
-style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
-loading="lazy">
+<img src="/images/house-before-after.webp" alt="Exterior decorating before and after" style="width:100%;border-radius:6px;">
 </a>
-
 <div id="decorating-lightbox" class="lightbox">
-<a href="#">
-<img src="/images/house-before-after.webp" alt="Exterior decorating before and after example enlarged">
-</a>
+<a href="#"><img src="/images/house-before-after.webp" alt=""></a>
 </div>
-
 <a href="/services/exterior-decorating.html" class="service-btn">View Exterior Decorating</a>
 
-<!-- Fence Installation -->
 <h2>Fence Installation</h2>
 <p>
-We install and repair all types of timber fencing — closeboard, feather edge, lap panels, decorative panels and bespoke solutions. Posts are set securely and panels fitted to provide strength, privacy and a neat finish. We also repair storm damage and fit gates to measure.
+We install and repair timber fencing including closeboard, feather edge and decorative panels, all securely fitted for strength and privacy.
 </p>
-
-<!-- Fence Lightbox (corrected path) -->
 <a href="#fence-lightbox">
-<img src="/images/fence-before-after.webp"
-alt="Fence installation before and after example"
-style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
-loading="lazy">
+<img src="/images/fence-before-after.webp" alt="Fence installation before and after" style="width:100%;border-radius:6px;">
 </a>
-
 <div id="fence-lightbox" class="lightbox">
-<a href="#">
-<img src="/images/fence-before-after.webp" alt="Fence installation before and after example enlarged">
-</a>
+<a href="#"><img src="/images/fence-before-after.webp" alt=""></a>
 </div>
-
 <a href="/services/fence-installation.html" class="service-btn">View Fence Installation</a>
-  
+
 <h2>Garden Maintenance</h2>
 <p>
-  From one-off tidy-ups to regular maintenance and landscaping, we offer lawn care, hedge trimming, weeding, planting, turfing, patios and raised beds. We create practical, low-maintenance gardens that look great year-round.
+We provide one-off and regular garden maintenance including lawn care, hedge trimming, planting and general tidy-ups.
 </p>
-  <a href="#gardening">
-<img src="/images/gardening.webp"
-alt="Regular and one off gardening services "
-style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
-loading="lazy">
-</a>
-
-<div id="fence-lightbox" class="lightbox">
-<a href="#">
-<img src="/images/gardening.webp" alt="Regular and one off gardening services Askern Doncaster">
-</a>
-</div>
 <a href="/services/garden.html" class="service-btn">View Garden Services</a>
 
-<!-- Guttering -->
-<h2>Gutter Replacement</h2>
+<h2>Gutter Services</h2>
 <p>
-Proper guttering protects your property from water damage. We replace gutters, repair leaks, maintain downpipes and restore fascias and soffits using durable, weather-resistant products.
+We replace, repair and maintain guttering, downpipes, fascias and soffits to protect your property from water damage.
 </p>
 <p>
 Our guttering services are available across multiple local areas.
 See all locations we cover on our
 <a href="/services/service-areas.html">service areas page</a>.
 </p>
-  <!-- Guttering Lightbox -->
-<a href="#guttering-lightbox">
-<img src="/images/gutter-repairs.webp"
-alt="Gutter cleaning, clearing, repairs and replacement Doncaster."
-style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
-loading="lazy">
-</a>
-
-<div id="guttering-lightbox" class="lightbox">
-<a href="#">
-<img src="/images/gutter-repairs.webp" alt="Gutter cleaning, clearing, repairs and replacement Doncaster example enlarged">
-</a>
-</div>
-
 <a href="/services/guttering.html" class="service-btn">View Gutter Services</a>
 
-<!-- Pressure Washing -->
 <h2>Pressure Washing</h2>
 <p>
-Our pressure washing refreshes driveways, patios, decking, paths and brickwork by removing algae, moss and staining — improving safety and kerb appeal.
+Our pressure washing service restores patios, driveways and paths by removing algae, moss and built-up grime.
 </p>
-  <a href="#pressure-washing">
-<img src="/images/pressure-washing.webp"
-alt="Exterior pressure washing service Askern Doncaster"
-style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
-loading="lazy">
-</a>
-
-  <div id="pressure-washing" class="lightbox">
-<a href="#">
-<img src="/images/pressure-washing.webp" alt="Exterior pressure washing service Askern Doncaster example enlarged">
-</a>
-</div>
-
-<div id="decorating-lightbox" class="lightbox">
-<a href="#">
-<img src="/images/house-before-after.webp" alt="Exterior decorating before and after example enlarged">
-</a>
-</div>
-
 <a href="/services/pressure-washing.html" class="service-btn">View Pressure Washing</a>
 
-<!-- uPVC Restoration -->
 <h2>uPVC Restoration</h2>
 <p>
-We restore uPVC windows, doors and conservatories using professional products and techniques to remove discolouration and grime without harming seals or frames.
+We restore uPVC windows, doors and conservatories, removing discolouration safely without damaging frames or seals.
 </p>
-  <a href="#upvc">
-<img src="/images/upvc.webp"
-alt="uPVC facia, gutter, framework, window frames, and conservatory valets. "
-style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
-loading="lazy">
-</a>
-
-<div id="fence-lightbox" class="lightbox">
-<a href="#">
-<img src="/images/upvc.webp" alt="uPVC facia, gutter, framework, window frames, and conservatory valets. Example enlarged">
-</a>
-</div>
 <a href="/services/upvc-restoration.html" class="service-btn">View uPVC Restoration</a>
 
 </main>
 
 <footer>
 <p>📞 Call 07735 873694</p>
-<footer style="background:#000; color:#fff; text-align:center; padding:28px 15px; font-size:14px;">
-<div>
-© Home Repairs 4U | Service Areas, Doncaster
-<br><br>
-
-<a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
-<a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Pressure Washing</a> |
-<a href="/services/fence-installation.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Fencing</a> |
-<a href="/services/upvc-restoration.html" style="color:#fff; text-decoration:underline; margin:0 6px;">uPVC Restoration</a> |
-<a href="/services/service-areas.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Service Areas</a>
-
-<br><br>
-
-<a href="https://www.facebook.com/people/Handyman-services/61584395621256/"
-target="_blank"
-rel="noopener"
-style="color:#fff; text-decoration:underline;">
-Facebook
-</a>
-</div>
-
-
+<p>
+<a href="/services/service-areas.html" style="color:#fff;text-decoration:underline;">Service Areas</a> |
+<a href="/services/guttering.html" style="color:#fff;text-decoration:underline;">Guttering</a> |
+<a href="/services/pressure-washing.html" style="color:#fff;text-decoration:underline;">Pressure Washing</a>
+</p>
+<p>© Home Repairs 4U – Doncaster & Surrounding Areas</p>
 </footer>
 
 </body>
